rename openjdk to jre